# sc-lang-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  main.cpp
.cache/clangd/index/: calc.cpp.6ECB001CE956E188.idx  calc.h.6A159D3AAD5731E6.idx  main.cpp.3824247D7AD33784.idx  test_calc.cpp.409EA7F11F6C70A3.idx
docs/: super_c_supermode.ebnf
src/: calc.cpp  calc.h  calc_test.cpp  main.cpp
src/diagnostics/: diagnostic.h  diagnostic_messages.h
src/driver/: compile.cpp  compile.h  compile_cmd.cpp  compile_cmd.h  driver.cpp  driver.h  driver_settings.h
src/lex/: lex.h  token.h
src/support/: diagnostic_fstrings.h  diagnostics.cpp  diagnostics.h  source_buffer.cpp  source_buffer.h  source_manager.cpp  source_manager.h
test/: learn_sc_in_y_mins.sc  return_2.sc  test_calc.cpp
